--- a/my site.html
+++ b/my site.html
@@ -7,7 +7,7 @@
     <body>
         <table>
             <tr>
-                <td><img src="C:\Users\abhis\OneDrive\Desktop\pictures\pictures\IMG_20211104_210429_1.jpg" alt="Abhishek pfp" width="245" height="150"></td>
+                <td><img src="IMG_20211104_210429_1.jpg" alt="Abhishek pfp" width="245" height="150"></td>
                 <td>
                     <h1>Abhishek Sharma</h1>
                     <p>
